# python-automata

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
python_automata/: io.py
python_automata/games/: game_gol.py  game_rot.py  games.py
python_automata/scripts/: run.py
tests/: test_games.py
