[tool.poetry]
name = "python-automata"
version = "1.0.0"
description = ""
authors = ["sgmdlt <user@user.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
wemake-python-styleguide = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
